--- a/src/app/domains/about-us/about-us.component.html
+++ b/src/app/domains/about-us/about-us.component.html
@@ -8,16 +8,16 @@
 
     <section class="main__bg-container">
 
-        <div class="bg-container__image">
+        <div class="main-part bg-container__image">
         </div>
 
-        <div class="bg-container__image">
+        <div class="main-part bg-container__image">
         </div>
 
-        <div class="bg-container__image">
+        <div class="main-part bg-container__image">
         </div>
 
-        <div class="bg-container__image">
+        <div class="main-part bg-container__image">
         </div>
 
     </section>
