--- a/src/app/domains/locations/locations.component.html
+++ b/src/app/domains/locations/locations.component.html
@@ -3,19 +3,17 @@
 <main class="main">
 
     <form class="search-bar-container">
-        <input type="text" autocomplete="off" [formControl]="searchQuery" name="searchQuery" class="search-bar-container__input"
-            placeholder="Search...">
-        <button class="search-bar-container__search__button" type="submit">
-            <img class="search-bar-container__search" src="assets/img/Search.svg" alt="Search icon">
-        </button>
+        <input type="text" autocomplete="off" [formControl]="searchQuery" name="searchQuery"
+            class="search-bar-container__input" placeholder="Search...">
+        <img class="search-bar-container__search" src="assets/img/Search.svg" alt="Search icon">
         <div *ngIf="filteredExperiences().length && searchQuery.value" class="search-bar-container__results">
             <p>Search Results for "{{ searchQuery.value }}"</p>
             <ul>
                 @for (experience of filteredExperiences(); track experience._id) {
-                    <div [routerLink]="['/experience', experience._id]">
-                        <li>{{ experience.name }} · <span> {{ experience.place }}</span></li>
-                        <img src="assets/img/right-arrow.svg" alt="right arrow">
-                    </div>
+                <div [routerLink]="['/experience', experience._id]">
+                    <li>{{ experience.name }} · <span> {{ experience.place }}</span></li>
+                    <img src="assets/img/right-arrow.svg" alt="right arrow">
+                </div>
                 }
             </ul>
         </div>
