--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -20,7 +20,7 @@
   max-width: 1700px;
   height: 4rem;
   padding: 0 1rem;
-  padding-right: .5rem;
+  padding-right: 0.5rem;
   position: relative;
 }
 
@@ -31,9 +31,8 @@
 }
 
 .navbar-buttons__logo {
-  margin-top: .3rem;
+  margin-top: 0.3rem;
   width: 75%;
-
 }
 
 @media (min-width: 1024px) {
@@ -74,17 +73,17 @@
   }
 
   .left__links::after {
-    content: '';
+    content: "";
     position: absolute;
     left: 0;
     bottom: -4px;
     width: 0%;
-    height: 3px; 
+    height: 3px;
     background-color: var(--white-bg);
-    transition: width 0.3s ease; 
+    transition: width 0.3s ease;
     border-radius: 10px;
   }
-  
+
   .left__links:hover::after {
     width: 100%;
   }
@@ -121,6 +120,11 @@
     width: 100%;
     padding: 0 0.3rem;
     cursor: pointer;
+  }
+
+  .active-image {
+    border-radius: 50%;
+    border: 2px solid black;
   }
 
   .right__button__menu {
@@ -249,7 +253,7 @@
 .cart__add-experience-button {
   margin: 0 1rem;
   display: flex;
-  padding: .7rem 1rem;
+  padding: 0.7rem 1rem;
   justify-content: center;
   background-color: rgb(207, 197, 197);
   border-radius: 10px;
@@ -257,6 +261,7 @@
   font-family: var(--arvo-subtitle-font);
   font-weight: 600;
   transition: all 0.3s ease;
+  cursor: pointer;
 }
 
 .cart__add-experience-button:hover {
@@ -270,7 +275,7 @@
   color: white;
   border: none;
   border-radius: 10px;
-  padding: .8rem;
+  padding: 0.8rem;
   margin-top: 2rem;
   text-align: center;
   text-transform: uppercase;
@@ -308,7 +313,6 @@
 =================================================================================================== */
 
 @media (max-width: 1024px) {
-  
   .mobile-navbar {
     width: 50vw;
     height: 95%;
@@ -333,20 +337,20 @@
 
   .mobile-navbar.show {
     transform: translateX(0%);
-  } 
+  }
 
   .mobile-navbar__header {
     background-image: url("/assets/img/navbar_png.png");
     position: absolute;
     width: 100%;
-    padding: .6rem 0;
+    padding: 0.6rem 0;
     left: 0;
     right: 0;
     border-bottom: 3px solid black;
   }
 
   .mobile-navbar__header-logo {
-    margin-top: .1rem;
+    margin-top: 0.1rem;
   }
 
   .mobile-navbar__close {
@@ -396,7 +400,7 @@
     cursor: pointer;
     padding: 1.5rem 1rem;
     text-align: center;
-    font-size: clamp(.8rem, 10vw, 1.7rem);
+    font-size: clamp(0.8rem, 10vw, 1.7rem);
     font-family: var(--mochiy-title-font);
     margin: 0;
   }
