Use Google Maps API (developing)

--- a/src/app/domains/locations/locations.component.html
+++ b/src/app/domains/locations/locations.component.html
@@ -45,9 +45,7 @@
         </div>
 
         <section class="map-container">
-            <iframe class="map"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4072907.058030722!2d-75.30399081416327!3d4.512929696921517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e15a43aae1594a3%3A0x9a0d9a04eff2a340!2sColombia!5e0!3m2!1ses-419!2sco!4v1718754580431!5m2!1ses-419!2sco"
-                allowfullscreen="" zoom="2" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <app-map></app-map>
         </section>
     </section>
 
