--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,8 +24,8 @@
                         <img src="assets\img\Menu_black.svg" alt="Menu logo">
                     </div>
                     <div class="right__button__user">
-                        <img *ngIf="!isloggedIn()" src="assets\img\MaleUser.svg" alt="User logo">
-                        <img class="active-image" *ngIf="isloggedIn()" [src]="'http://localhost:3000/uploads/' + user()?.profileImage" alt="User Logo">
+                        <img *ngIf="!isloggedIn() || !user().profileImage" src="assets\img\MaleUser.svg" alt="User logo">
+                        <img class="active-image" *ngIf="isloggedIn() && user().profileImage" [src]="'http://localhost:3000/uploads/' + user()?.profileImage" alt="User Logo">
                     </div>
                 </div>
             </div>
