add the notifications to a single component

--- a/src/app/domains/experience-page/experience-page.component.html
+++ b/src/app/domains/experience-page/experience-page.component.html
@@ -44,12 +44,8 @@
 
 <!-- Notification -->
 
-<div class="notification" *ngIf="activeNotification()">
-    <div class="notification__body">
-        <img src="assets/img/check-circle.svg" alt="Success" class="notification__icon">
-        <p>The experience has been successfully added to your cart!</p>
-    </div>
-    <div class="notification__progress"></div>
-</div>
+<app-notification [title]="'The experience has been successfully added to your cart!'" 
+    *ngIf="activeNotification()">
+</app-notification>
 
 <app-footer />
