--- a/src/app/domains/login/login.component.html
+++ b/src/app/domains/login/login.component.html
@@ -47,12 +47,6 @@
   </div>
 </main>
 
-<div class="notification" *ngIf="activeNotification()">
-  <div class="notification__body">
-      <img src="assets/img/check-circle.svg" alt="Success" class="notification__icon">
-      <p>Your account has been successfully created!</p>
-  </div>
-  <div class="notification__progress"></div>
-</div>
+<app-notification [title]="'Your account has been successfully created!'" *ngIf="activeNotification()"/>
 
 <app-footer />
